--- a/wuziqi/wuziqi.vcxproj
+++ b/wuziqi/wuziqi.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{DE1B6018-3ED2-40CE-852B-409F28D8B7AB}</ProjectGuid>
     <RootNamespace>wuziqi</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <ProjectName>五子棋</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
